--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="redCi" onclick="printCi()" checked>
                                 <label class="form-check-label" for="flexRadioDefault2">
-                                    빨간색 CI
+                                    빨간색 로고
                                 </label>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="blackCi" onclick="printCi()" disabled>
                                 <label class="form-check-label" for="flexRadioDefault1">
-                                    검정색 CI
+                                    검정색 로고
                                 </label>
                             </div>
                         </div>
