--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
         function printCi()  {
             if (document.querySelector('#blackCi').checked) {
-                document.getElementById("ciResult").src = "ldrs_signature_logo_black.png"
+                document.getElementById("ciResult").src = "https://legendaries.team/ldrs_signature_logo_black.png"
             } else if (document.querySelector('#redCi').checked) {
                 document.getElementById("ciResult").src = "https://legendaries.team/ldrs_signature_logo.png"
             }
@@ -145,7 +145,7 @@
                         <label for="companyEmail" class="form-label">회사 이메일<span class="text-red">*</span></label>
                         <div class="input-group mb-3">
                             <input type="text" class="form-control" id="emailId" onkeyup="printEmail()" placeholder="james.hong" aria-label="email-id" aria-describedby="basic-addon2" required>
-                            <span class="input-group-text" id="basic-addon2">@legendaries.team</span>
+                            <span class="input-group-text" id="emailId2">@legendaries.team</span>
                             <div class="invalid-feedback">
                                 회사 이메일 아이디를 입력해주세요.
                             </div>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="col-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="blackCi" onclick="printCi()" disabled>
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="blackCi" onclick="printCi()">
                                 <label class="form-check-label" for="flexRadioDefault1">
                                     검정색 로고
                                 </label>
