--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
                         <label for="logoColor" class="form-label">회사 로고 타입</label>
                         <div class="col-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="redCi" onclick="printCi()" checked>
-                                <label class="form-check-label" for="flexRadioDefault2">
+                                <input class="form-check-input" type="radio" name="selectLogo" id="redCi" onclick="printCi()" checked>
+                                <label class="form-check-label" for=selectLogo1">
                                     빨간색 로고
                                 </label>
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="blackCi" onclick="printCi()">
-                                <label class="form-check-label" for="flexRadioDefault1">
+                                <input class="form-check-input" type="radio" name="selectLogo" id="blackCi" onclick="printCi()">
+                                <label class="form-check-label" for="selectLogo2">
                                     검정색 로고
                                 </label>
                             </div>
