영문 주소로 변경, 경고 문구 추가

--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
                                                         <br>Mobile : (+82) 
                                                         <span id="mobileNumResult">10-1234-5678</span>
                                                         <br>Office : (+82) 70-8680-0022, Fax : (+82) 2-6953-1104
-                                                        <br>서울특별시 강남구 테헤란로 218, 13층 (역삼동, 에이피타워), 우편번호 06221
+                                                        <br>13F, 218, Teheran-ro, Gangnam-gu, Seoul, 06221 Republic of Korea
+                                                    </p>
+                                                    <p style="line-height:1.6; font-family:arial, helvetica, sans-serif; font-size:8pt; color:rgb(224, 127, 127)">
+                                                        Confidentiality Caution :
+                                                        <br>1. 당사는 본 이메일이 원본과 일치하며 전송 도중 어떠한 변형도 되지 않았다는 보증을 할 수 없습니다.
+                                                        <br>2. 또한, 본 이메일 내용은 계약 협의 단계에서의 협의 사항에 불과하므로 당사자간 확정/합의된 사항이 아닙니다.
                                                     </p>
                                                 </td>
                                                 <td style="padding:12px 0px 0px 0px; display:block;width:100%">
