업데이트 날짜 추가

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <main>
             <div class="py-4 text-center">
                 <h3 class="display-3"><strong>LEGENDARIES 메일 서명 생성기</strong></h3>
-                <p class="madeby">made by <a class="madeby" href="mailto:jeff.jin@legendaries.team">jeff.jin</a></p>
+                <p class="madeby">made by <a class="madeby" href="mailto:jeff.jin@legendaries.team">jeff.jin</a> / Thanks to <a class="madeby" href="https://chat.openai.com" target="_blank">ChatGPT</a></p>
             </div>
 
             <p class="text-center">▼ 메일 서명 미리보기 ▼</p>
@@ -221,6 +221,9 @@
             </div>
             <div class="mb-4">
                 <p class="text-center"><a class="link-text" href="https://support.google.com/mail/answer/8395?hl=ko&co=GENIE.Platform%3DDesktop&oco=1" target="_blank">서명 설정하기 (PC로만 가능)</a></p>
+            </div>
+            <div class="mb-4">
+                <p class="text-center madeby">Last Updated : 2023-03-01</a></p>
             </div>
         </main>
     </div>
