이메일 플레이스홀더 수정

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="mb-4">
                         <label for="companyEmail" class="form-label">회사 이메일<span class="text-red">*</span></label>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" id="emailId" onkeyup="printEmail()" placeholder="james.hong" aria-label="email-id" aria-describedby="basic-addon2" required>
+                            <input type="text" class="form-control" id="emailId" onkeyup="printEmail()" placeholder="email" aria-label="email-id" aria-describedby="basic-addon2" required>
                             <span class="input-group-text" id="emailId2">@legendaries.team</span>
                             <div class="invalid-feedback">
                                 회사 이메일 아이디를 입력해주세요.
