--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                                                         <a id="emailResult" href="mailto:email.id@legendaries.team" target="_blank">email.id@legendaries.team</a>
                                                         <br>Mobile : (+82) 
                                                         <span id="mobileNumResult">10-1234-5678</span>
-                                                        <br>Office : (+82) 70-8680-0022, Fax : (+82) 70-8220-0258
-                                                        <br>7F, 123, Teheran-ro, Gangnam-gu, Seoul, 06221 Republic of Korea
+                                                        <br>Office : (+82) 70-8680-0022, Fax : (+82) 2-6956-6020
+                                                        <br>2F, 40, Seolleung-ro 93-gil, Gangnam-gu, Seoul, 06148 Republic of Korea
                                                     </p>
                                                     <p style="line-height:1.6; font-family:arial, helvetica, sans-serif; font-size:8pt; color:rgb(224, 127, 127)">
                                                         Confidentiality Caution :
