--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                                         <br>Mobile : (+82) 
                                                         <span id="mobileNumResult">10-1234-5678</span>
                                                         <br>Office : (+82) 70-8680-0022, Fax : (+82) 2-6956-6020
-                                                        <br>2F, 40, Seolleung-ro 93-gil, Gangnam-gu, Seoul, 06148 Republic of Korea
+                                                        <br>207, Narakium Yeoksam A Building, 40, Seolleung-ro 93-gil, Gangnam-gu, Seoul, 06148 Republic of Korea
                                                     </p>
                                                     <p style="line-height:1.6; font-family:arial, helvetica, sans-serif; font-size:8pt; color:rgb(224, 127, 127)">
                                                         Confidentiality Caution :
